# ae-plugin-exp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Skeleton.cpp  build.bat  clean.bat
Examples/: BuildAll.sln
Examples/Template/Skeleton/: Skeleton.h  Skeleton_Strings.cpp  Skeleton_Strings.h
Examples/Template/Skeleton/Win/: Skeleton.vcxproj  SkeletonPiPL.rc
